# oxiflow

./: .codecov.yml  .gitignore  CHANGELOG.md  CODE_DE_CONDUITE.md  CODE_OF_CONDUCT.md  CONTRIBUER.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  DEVELOPPEMENT.md  NOTICE  README.fr.md  README.md  crates.js  help.html  index.html  settings.html  src-files.js
.github/: release-drafter-semver.yml  release_template.md
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.md  config.yml  decision.yml  feature.yml  feature_request.md  maintenance.yml
.github/workflows/: ci.yml  coverage.yml  mirror.yml  release-drafter.yml
docs/: katex-header.html
examples/: lahar_lake_proto.rs
oxiflow/: all.html  index.html  sidebar-items.js
oxiflow/boundary/: enum.BoundaryLocation.html  enum.BoundaryType.html  index.html  sidebar-items.js  trait.BoundaryCondition.html
oxiflow/context/: index.html  sidebar-items.js
oxiflow/coupling/: index.html  sidebar-items.js  struct.Interface.html  trait.CouplingOperator.html
oxiflow/mesh/: index.html  sidebar-items.js  trait.Mesh.html
oxiflow/model/: index.html  sidebar-items.js
oxiflow/operators/: index.html
oxiflow/solver/: index.html  sidebar-items.js  struct.SimulationResult.html  trait.Solver.html
search.index/: 001def55b6.js  00a09a3b87a1.js  00bad2acb1.js  00c3c4a62452.js  00e8056c6c40.js  00fcde50e94c.js  036edee75d.js  042cd2d28c20.js  055770a89c.js  060c4f96c9.js  069a4afa364b.js  0726e1828b9a.js  074481062904.js  0827183d3b.js  08431fa384d7.js  08ebdbd8f4.js  0901adb742.js  0986b0f8fb61.js  09c2712e4975.js  09f89a0d5a.js  0af9d690dcb3.js  0b350d30b1.js  0b4097649d0c.js  0b840e1ac6c5.js  0bb25c4ec82e.js  0d414edc0a.js  0d4f6a875a.js  0d70a38bf8.js  0da3ddb82e9d.js  0da7bbf25b.js  0decb4f0150a.js  0e0ee03e9fc7.js  0ec25229263d.js  0f05d6fc75.js  0f1d3e7a8c.js  0f8a1385a910.js  0ff1dfa7bf.js  104128882f10.js  1041b165c7ef.js  104716e3b2b3.js  (+224 more)
search.index/crateNames/: 121c1f7b4ba6.js
search.index/desc/: 447bb3b900.js  451c6dfcf188.js  4ae55646cf97.js  515745296c0f.js  5eb77afd93aa.js  65116e928f86.js  9da8155cc146.js  a09c9cbb055a.js  a86e2d38a8f8.js
search.index/entry/: 0b53633892fd.js  440e327b9db9.js  69115039a7e3.js  6f7550d8fb2a.js  79120b4fd4.js  d44b246d0c88.js  d892235a447f.js  efdc2a74be93.js  f8c00af7a375.js
search.index/function/: 2414c054f863.js  74462f89fda7.js  863492592334.js  aa079e548cbd.js  b37adae990fe.js  bd0c462c57.js  bedfc7c01388.js
search.index/generic_inverted_index/: 1f8f3fa02e92.js  64b9aca23b23.js  6e597e3c04ee.js  d81d6d23fa89.js  e26846ad13.js  ef7a8c26207a.js  f0e407ae0a2c.js
search.index/name/: 00c90e81e2d3.js  067444982050.js  45099c614303.js  5c404f7eca.js  c26686b37e1d.js  d7920af860.js  f7f2d208a903.js  (+1 more)
src/: lib.rs
tests/: coupling_proto.rs  lahar_lake_proto.rs  solver_pipeline_chromatography.rs
(+224 files in other folders)
